Add standalone GUI application